jilles      2007/03/15 15:30:51 UTC	(20070315-7945)
  Log:
  Add nickserv/setpass to example.conf, enabled by default.
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 


jilles      2007/03/15 14:51:58 UTC	(20070315-7943)
  Log:
  chanserv forcexop: if halfops are not used, don't give
  the founder +h as that leads to various inappropriate
  permission denied errors.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/xop.c (File Modified) 


nenolod     2007/03/13 07:16:52 UTC	(20070313-7941)
  Log:
  - a table rendering class which assumes a lot.
  

  Changes:	Modified:
  +2 -1		trunk/contrib/Makefile.in (File Modified) 
  +57 -0	trunk/contrib/os_tabletest.c (File Added) 
  +1 -0		trunk/include/atheme.h (File Modified) 
  +49 -0	trunk/include/table.h (File Added) 
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +245 -0	trunk/src/table.c (File Added) 


nenolod     2007/03/13 06:01:13 UTC	(20070313-7939)
  Log:
  - add some documentation on gettext
  

  Changes:	Modified:
  +1101 -0	trunk/ABOUT-NLS (File Added) 


jilles      2007/03/12 15:19:26 UTC	(20070312-7937)
  Log:
  Remove chanacs_unref() and chanacs_unref_host(), formerly
  chanacs_delete() and chanacs_delete_host().
  Instead, use chanacs_find()/chanacs_find_host_literal()
  and object_unref(). Note that chanacs_unref() and
  chanacs_unref_host() deleted only an exact match of the
  flags, while chanacs_find() and chanacs_find_host_literal()
  return entries which have at least the given flags.
  

  Changes:	Modified:
  +0 -2		trunk/include/account.h (File Modified) 
  +0 -40	trunk/src/account.c (File Modified) 


jilles      2007/03/12 15:06:10 UTC	(20070312-7935)
  Log:
  Use object_unref() on the found ca pointer instead of
  chanacs_unref()/chanacs_unref_host(). Also slightly
  improve handling of akick/xop remove of entries with
  different access than only +b/that xop value.
  

  Changes:	Modified:
  +8 -3		trunk/modules/chanserv/akick.c (File Modified) 